--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node Src/app.js"
+    "start": "node src/app.js"
   },
   "author": "",
   "license": "ISC",
