--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "request": "^2.88.2",
-    "postman-request": "^2.88.1-postman.23"
+    "request": "^2.88.2"
   }
 }
